--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
         android:layout_alignBottom="@+id/bConnect"
         android:layout_alignParentStart="true"
         android:layout_marginStart="13dp"
-        android:id="@+id/etIp" />
+        android:id="@+id/etIp"
+        android:text="192.168.1.72" />
 
     <ImageView
         android:layout_width="match_parent"
