--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -4,31 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.isthisloss.antouchclient.LauncherActivity">
+    tools:context="com.isthisloss.antouchclient.LauncherActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:visibility="invisible"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="88dp" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="99dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.498" />
 
     <Button
         android:id="@+id/searchBtn"
         android:layout_width="90dp"
-        android:layout_height="44dp"
+        android:layout_height="48dp"
         android:text="@string/SearchBtn"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="272dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="198dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textMsg"
-        android:layout_width="212dp"
-        android:layout_height="112dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="149dp"
+        android:layout_width="200dp"
+        android:layout_height="99dp"
+        android:layout_below="@+id/progressBar"
+        android:layout_marginBottom="94dp"
+        android:layout_marginTop="95dp"
+        android:text="@string/SearchInstr"
+        app:layout_constraintBottom_toTopOf="@+id/searchBtn"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
         tools:text="@string/SearchInstr" />
+
 </android.support.constraint.ConstraintLayout>
