--- a/app/src/main/res/layout/fragment_others.xml
+++ b/app/src/main/res/layout/fragment_others.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.isthisloss.antouchclient.MainActivity$PlaceholderFragment">
+    tools:context="com.isthisloss.antouchclient.MainActivity$TabFragmentFactory">
 
     <TextView
         android:id="@+id/section_label"
