--- a/app/src/main/res/layout/fragment_touch_tab.xml
+++ b/app/src/main/res/layout/fragment_touch_tab.xml
@@ -9,37 +9,76 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.isthisloss.antouchclient.Main2Activity">
-
-    <Button
-        android:text="Connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:id="@+id/bConnect"
-        android:onClick="onConnect"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/twDisplay"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_alignBottom="@+id/bConnect"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="13dp"
-        android:id="@+id/etIp"
-        android:text="192.168.1.72" />
+    tools:context="com.isthisloss.antouchclient.MainActivity">
 
     <ImageView
+        android:id="@+id/iwTouch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@color/colorPrimary"
-        android:id="@+id/iwTouch"
-        android:layout_below="@+id/bConnect"
-        android:layout_alignStart="@+id/editText2"
-        android:layout_marginTop="28dp" />
+        android:layout_above="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        app:srcCompat="@color/colorPrimary" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnVolDown"
+                android:layout_width="90dp"
+                android:layout_height="60dp"
+                android:text="VolDw" />
+
+            <Button
+                android:id="@+id/btnUp"
+                android:layout_width="90dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="Up" />
+
+            <Button
+                android:id="@+id/btnVolUp"
+                android:layout_width="90dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="VolUP" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnLeft"
+                android:layout_width="90dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="Left" />
+
+            <Button
+                android:id="@+id/btnDown"
+                android:layout_width="90dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="Down" />
+
+            <Button
+                android:id="@+id/btnRight"
+                android:layout_width="90dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="Right" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
