--- a/app/src/main/res/layout/extended_buttons_fragment.xml
+++ b/app/src/main/res/layout/extended_buttons_fragment.xml
@@ -1,16 +1,131 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.isthisloss.antouchclient.MainActivity$TabFragmentFactory">
+    android:background="@android:color/background_light"
+    tools:context="com.isthisloss.antouchclient.MainActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btnVolDown"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="88dp"
+        android:layout_height="60dp"
+        android:layout_weight="1"
+        android:background="@android:color/background_light"
+        android:onClick="onButtonClick"
+        android:text="Volume Down"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintRight_toLeftOf="@+id/btnTextInput"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btnVolUp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="88dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:background="@android:color/background_light"
+        android:onClick="onButtonClick"
+        android:text="Volume\nUp"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintLeft_toRightOf="@+id/btnBackspace"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnMediaPause"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="88dp"
+        android:layout_height="60dp"
+        android:layout_weight="1"
+        android:background="@android:color/background_light"
+        android:onClick="onButtonClick"
+        android:text="Pause"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintRight_toLeftOf="@+id/btnMediaPlay"
+        app:layout_constraintLeft_toRightOf="@+id/btnMediaBack"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnTextInput" />
+
+    <Button
+        android:id="@+id/btnTextInput"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="90dp"
+        android:layout_height="60dp"
+        android:layout_weight="0.93"
+        android:background="@android:color/background_light"
+        android:onClick="onTextInputClick"
+        android:text="Keyboard"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintRight_toLeftOf="@+id/btnBackspace"
+        app:layout_constraintLeft_toRightOf="@+id/btnVolDown"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <Button
+        android:id="@+id/btnMediaBack"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="88dp"
+        android:layout_height="60dp"
+        android:layout_weight="1"
+        android:background="@android:color/background_light"
+        android:onClick="onButtonClick"
+        android:text="Last"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintRight_toLeftOf="@+id/btnMediaPause"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnVolDown" />
+
+    <Button
+        android:id="@+id/btnMediaPlay"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="88dp"
+        android:layout_height="60dp"
+        android:layout_weight="1"
+        android:background="@android:color/background_light"
+        android:onClick="onButtonClick"
+        android:text="Play"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintRight_toLeftOf="@+id/btnMediaNext"
+        app:layout_constraintLeft_toRightOf="@+id/btnMediaPause"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />
+
+    <Button
+        android:id="@+id/btnBackspace"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="90dp"
+        android:layout_height="60dp"
+        android:layout_weight="1"
+        android:background="@android:color/background_light"
+        android:onClick="onButtonClick"
+        android:text="Backspace"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintRight_toLeftOf="@+id/btnVolUp"
+        app:layout_constraintLeft_toRightOf="@+id/btnTextInput"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <Button
+        android:id="@+id/btnMediaNext"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="88dp"
+        android:layout_height="60dp"
+        android:layout_weight="1"
+        android:background="@android:color/background_light"
+        android:onClick="onButtonClick"
+        android:text="Next"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/btnMediaPlay"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnVolUp" />
+</android.support.constraint.ConstraintLayout>
